--- a/src/application/module/Application/view/layout/layout.phtml
+++ b/src/application/module/Application/view/layout/layout.phtml
@@ -12,7 +12,7 @@
              ->appendHttpEquiv('X-UA-Compatible', 'IE=edge');
 
         $this->headLink()
-             ->prependStylesheet($this->basePath('/css/custom-style.css'))
+             ->prependStylesheet($this->basePath('/css/custom-styles.css'))
              ->prependStylesheet($this->basePath('/css/bootstrap.min.css'));
 
         $this->headScript()
